Fix rendering issues in Firefox
1. padding-bottom does not work on flex children in Firefox so
   Gallery component was not showing thumbnails correctly

2. Inconsistent spacing between buttons inside sidenav resulted
   in one extra line wrapping

--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -7,9 +7,7 @@
   flex: 1 1 25%;
   max-width: 400px;
   min-width: 250px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
   padding: 20px;
   margin: 10px;
   background-color: #fff;
